--- a/BodySee/Windows/ToolBar.xaml
+++ b/BodySee/Windows/ToolBar.xaml
@@ -1,13 +1,12 @@
-﻿<Window x:Class="BodySee.Windows.WhiteBoard"
+﻿<Window x:Class="BodySee.Windows.ToolBar"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BodySee.Windows"
         mc:Ignorable="d"
-        WindowState="Maximized"
-        Title="WhiteBoard" Height="450" Width="800">
+        Title="ToolBar" Height="450" Width="800">
     <Grid>
-        <InkCanvas x:Name="canvas" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Margin="10,-24,-10,23.5" KeyDown="Canvas_KeyDown" TouchUp="Canvas_TouchUp"/>
+        
     </Grid>
 </Window>
