--- a/BodySee/Windows/Menu.xaml
+++ b/BodySee/Windows/Menu.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="BodySee.Windows.Menu"
+﻿<Window x:Name="Change" x:Class="BodySee.Windows.Menu"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Topmost="True"
         ResizeMode="NoResize"
-        Title="Menu" Height="210" Width="597">
+        Title="Menu" Height="210" Width="597" LocationChanged="Menu_LocationChanged">
     <Grid x:Name="background" KeyDown="Background_KeyDown" Focusable="True" Loaded="Background_Loaded">
         <Grid>
             <Grid.RowDefinitions>
