--- a/BodySee/Windows/AppList.xaml
+++ b/BodySee/Windows/AppList.xaml
@@ -8,6 +8,11 @@
         Title="AppList" Height="137.5" Width="465.5">
     <Grid>
         <ListBox Name="AppItemList" HorizontalContentAlignment="Center" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+            <ListBox.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <StackPanel Orientation="Horizontal"></StackPanel>
+                </ItemsPanelTemplate>
+            </ListBox.ItemsPanel>
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <Grid>
@@ -18,7 +23,6 @@
                         <Image Source="{Binding Source}"></Image>
                         <TextBlock Grid.Row="1" Text="{Binding Title}"></TextBlock>
                     </Grid>
-
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
