--- a/BodySee/Windows/BrightnessWindow.xaml
+++ b/BodySee/Windows/BrightnessWindow.xaml
@@ -13,6 +13,6 @@
         </Grid.ColumnDefinitions>
 
         <Image Source="../Images/brightness_tmp.jpeg"></Image>
-        <Slider Name="BrightnessSlider" Grid.Column="1" VerticalAlignment="Center" Margin="10" ValueChanged="BrightnessSlider_ValueChanged"></Slider>
+        <Slider Name="BrightnessSlider" Grid.Column="1" VerticalAlignment="Center" Margin="10"></Slider>
     </Grid>
 </Window>
