--- a/BodySee/Windows/BrightnessWindow.xaml
+++ b/BodySee/Windows/BrightnessWindow.xaml
@@ -1,10 +1,12 @@
 ﻿<Window x:Class="BodySee.Windows.BrightnessWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:BodySee.Windows"
         mc:Ignorable="d"
+        WindowStyle="None"
+        Topmost="true"
+        StateChanged="Window_StateChanged"
         Title="BrightnessWindow" Height="115.937" Width="358.366">
     <Grid>
         <Grid.ColumnDefinitions>
@@ -12,7 +14,7 @@
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
-        <Image Source="../Images/brightness_tmp.jpeg"></Image>
-        <Slider Name="BrightnessSlider" Grid.Column="1" VerticalAlignment="Center" Margin="10"></Slider>
+        <Image Margin="5" Source="../Images/亮度.png"></Image>
+        <Slider Name="BrightnessSlider" IsSelectionRangeEnabled="True" Grid.Column="1" VerticalAlignment="Center" Style="{DynamicResource SliderStyle1}" Margin="10"></Slider>
     </Grid>
 </Window>
